k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: viewcount
  labels:
    app: viewcount
spec:
  selector:
    app: viewcount
  ports:
    - port: 8080
      targetPort: 8080
